--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ---------------- #
 baseurl:
 date_format: "ordinal"
-title: my first blog
+title: 小鸟游六花
 subtitle: "爆裂吧，现实。崩断吧，神经！Vanshiment this world!"
 description: "马壮的个人博客，公众号：闷骚的程序员"
 keywords: 大学生我上早把
