--- a/_config.yml
+++ b/_config.yml
@@ -59,9 +59,9 @@ highlight_theme: github
 author: Zhuang Ma
 organization: 
 organization_url: 
-github_username: mzlogin
-location: Wuhan, China
-email: chumpma@gmail.com
+github_username: liga
+location: Beijing, China
+email: 3123594773@qq.com
 
 # ---------------- #
 #    Navigation    #
