--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 date_format: "ordinal"
 title: 小鸟游六花
 subtitle: "爆裂吧，现实。崩断吧，神经！Vanshiment this world!"
-description: "马壮的个人博客，公众号：闷骚的程序员"
+description: "漆黑烈焰使"
 keywords: 大学生我上早把
 timezone: Asia/Beijing
 encoding: "utf-8"
